Fixed sidebar icon alignment
remove debug sytling

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -12,6 +12,16 @@ html {
 
 $primary-green: #3b975a;
 
+// * { background-color: rgba(255,0,0,.2); }
+// * * { background-color: rgba(0,255,0,.2); }
+// * * * { background-color: rgba(0,0,255,.2); }
+// * * * * { background-color: rgba(255,0,255,.2); }
+// * * * * * { background-color: rgba(0,255,255,.2); }
+// * * * * * * { background-color: rgba(255,255,0,.2); }
+// * * * * * * * { background-color: rgba(255,0,0,.2); }
+// * * * * * * * * { background-color: rgba(0,255,0,.2); }
+// * * * * * * * * * { background-color: rgba(0,0,255,.2); }
+
 html,
 body,
 .map {
@@ -177,4 +187,17 @@ div.tooltip {
 .search__select {
   border-radius: 0.3em;
   display: flex;
+}
+
+.sidebar__icon {
+  display: flex;
+}
+
+// override via specificity
+div>.leaflet-sidebar-tabs>ul>li>a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
